@@ -70,4 +70,4 @@ def exists(env):
         return env.Detect('lib')
     else:
         # there's at least one version of MSVS installed.
-        return True
+        return 1
